update the json file

--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 1,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {
@@ -36,7 +36,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jfoMfusqcMts",
-        "outputId": "7d0b057a-2703-4abe-b652-0e6a4758ad53"
+        "outputId": "4a04b8a2-9e20-41e4-fc0f-47bba44c5bb7"
       },
       "outputs": [
         {
@@ -200,7 +200,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 2,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {
@@ -233,7 +233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 3,
       "metadata": {
         "id": "M-89dLxbeM7C"
       },
@@ -249,7 +249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 4,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {
@@ -290,7 +290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 5,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {
@@ -330,7 +330,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 6,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {
@@ -387,7 +387,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 7,
       "metadata": {
         "id": "vbhB4CHzdNNQ"
       },
@@ -409,7 +409,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 8,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {
@@ -425,12 +425,14 @@
       },
       "outputs": [],
       "source": [
+        "# calculate bleu results\n",
         "def bleuresults(reference, candidate):\n",
         "    reference = [reference.split()]\n",
         "    candidate = candidate.split()\n",
         "    smoothie = SmoothingFunction().method4\n",
         "    return sentence_bleu(reference, candidate, smoothing_function=smoothie)\n",
         "\n",
+        "# calculate memery usage\n",
         "def printmemorys():\n",
         "    process = psutil.Process()\n",
         "    memory_info = process.memory_info()\n",
@@ -449,7 +451,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 10,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {
@@ -463,23 +465,23 @@
         },
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 381,
+          "height": 364,
           "referenced_widgets": [
-            "3c82cec054ef4be5a68811fe5d6b65eb",
-            "bd22e039cb7a49d3b000146edc1e09cb",
-            "85d307d1085c4cd397f7daedd09f26d8",
-            "80812459a1fa4691aba864625055aaf1",
-            "699f240060214fbab9765195d8f10cd6",
-            "39ecee2a221e44eab574ede87276139f",
-            "cce39bd19500428bba7df8c3d3ff642b",
-            "5bf71a0e124b47619d6f0de13485b91c",
-            "cc25fd5ac17a438f8d7e3543bb138099",
-            "56a84644d8bf41fabc86d84df38190d6",
-            "ca03b5095ce54c21ab6d63d87f608c28"
+            "427ee0d990844a739aab543d2b415ede",
+            "dcec419d10454e56a1a75fb10a0c15e9",
+            "f2eeeb76787c4834a1d4e8c78f0088c5",
+            "773efb85a666446e90ddca0d7f2314ba",
+            "f1491c28ff774135a984bda165cabb52",
+            "4029f3cba0454948b3ac3e6119ec745c",
+            "438bc12544c942b6adea22db2ffc69db",
+            "e09a34048f1a4bac93a738302f7044e0",
+            "49eab99af5124f8b8315c9259fc5d4f7",
+            "cd3659f0855c43bcb93187646aab4126",
+            "e713e955b19d4ba2b7366b826464369a"
           ]
         },
         "id": "JMIHmTOUcMtt",
-        "outputId": "4ec5627f-472a-40db-a6ce-8e282dc0ba82"
+        "outputId": "a679b3ed-0b92-464e-c622-ebb66b7ff4a0"
       },
       "outputs": [
         {
@@ -509,7 +511,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "3c82cec054ef4be5a68811fe5d6b65eb"
+              "model_id": "427ee0d990844a739aab543d2b415ede"
             }
           },
           "metadata": {}
@@ -518,18 +520,17 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Memory Usage: 41575.90 MB\n",
-            "Memory Usage: 40501.29 MB\n",
-            "Memory Usage: 42134.40 MB\n",
-            "Memory Usage: 39075.36 MB\n",
-            "Memory Usage: 41125.88 MB\n",
-            "Memory Usage: 39928.55 MB\n",
-            "Memory Usage: 38316.47 MB\n",
-            "Memory Usage: 40971.36 MB\n",
-            "Memory Usage: 40230.39 MB\n",
-            "Memory Usage: 38578.72 MB\n",
-            "Results saved to t5models.csv\n",
-            "Data samples saved to t5models.json\n"
+            "Memory Usage: 38328.37 MB\n",
+            "Memory Usage: 44073.52 MB\n",
+            "Memory Usage: 47173.21 MB\n",
+            "Memory Usage: 49425.06 MB\n",
+            "Memory Usage: 48774.15 MB\n",
+            "Memory Usage: 46289.30 MB\n",
+            "Memory Usage: 45908.36 MB\n",
+            "Memory Usage: 48046.88 MB\n",
+            "Memory Usage: 47491.11 MB\n",
+            "Memory Usage: 49264.98 MB\n",
+            "Results saved to t5models.csv\n"
           ]
         }
       ],
@@ -538,19 +539,18 @@
         "    definitions = load_definitions('ctx_pd.txt')\n",
         "    definitions = clean_definitions(definitions)\n",
         "\n",
-        "    # initialize the retriever and generate model\n",
+        "    # Initialize Retriever model\n",
         "    retriever = Retriever(definitions, num_retrieved_docs=5)\n",
-        "    T5sassistance = T5Assistant(models)\n",
         "\n",
-        "    # save the result to a list and dictionary\n",
-        "    resultslist = []\n",
-        "    data_samples = {\n",
-        "        'question': [],\n",
-        "        'answer': [],\n",
-        "        'contexts': []\n",
-        "    }\n",
+        "    # Initialize multiple T5 models\n",
+        "    t5sassistances = T5Assistant(models)\n",
         "\n",
-        "    # sample queries\n",
+        "    jsont5 = {model_name: {'question': [], 'answer': [], 'contexts': [], 'Bleu': [], 'Memory Usage (MB)': [], 'Time Taken (seconds)': []} for model_name in models}\n",
+        "\n",
+        "    # List to store results for CSV\n",
+        "    csvresults = []\n",
+        "\n",
+        "    # Sample questions\n",
         "    generalquestions = [\n",
         "        \"What is the definition of Articulation?\",\n",
         "        \"Which accreditation framework is mentioned under the definition of Doctoral Degree?\",\n",
@@ -564,32 +564,39 @@
         "        \"Based on the definitions provided, how would the process of Admission differ from the process of Application, and what criteria must a student meet to progress from one to the other?\"\n",
         "    ]\n",
         "\n",
-        "    # go over all the queries\n",
+        "    # Iterate through each query\n",
         "    for query in generalquestions:\n",
+        "        # Record time and memory usage for each query\n",
         "        start_time = time.time()\n",
         "\n",
-        "        # search the relevent definition\n",
+        "        # Search for relevant definitions\n",
         "        retrieved_docs = retriever.search(query)\n",
         "        retrinfo = \" \".join([doc.page_content for doc in retrieved_docs[:3]])\n",
         "        referencess = [doc.page_content for doc in retrieved_docs]\n",
         "\n",
-        "        # create replies for different models\n",
-        "        repliesgeneration = T5sassistance.generalreplyies(query, retrinfo)\n",
+        "        # Generate replies for each model\n",
+        "        generated_replies = t5sassistances.generalreplyies(query, retrinfo)\n",
         "\n",
-        "        # go over the results\n",
-        "        for model_name, reply in repliesgeneration.items():\n",
+        "        # Iterate through each model's generated result\n",
+        "        for model_name, reply in generated_replies.items():\n",
         "            reply = cleanreplys(reply)\n",
         "            bleu_score = bleuresults(\" \".join(referencess), reply) if referencess else \"N/A\"\n",
         "\n",
-        "            # record the memory usage\n",
+        "            # Record memory usage and generation time\n",
         "            memory_usage = memories()\n",
-        "\n",
-        "            # calculate the time use\n",
         "            end_time = time.time()\n",
         "            time_taken = end_time - start_time\n",
         "\n",
-        "            # save the result to the list and dictionary\n",
-        "            resultslist.append({\n",
+        "            # Store results for JSON\n",
+        "            jsont5[model_name]['question'].append(query)\n",
+        "            jsont5[model_name]['answer'].append(reply)\n",
+        "            jsont5[model_name]['contexts'].append(referencess)\n",
+        "            jsont5[model_name]['Bleu'].append(bleu_score)\n",
+        "            jsont5[model_name]['Memory Usage (MB)'].append(memory_usage)\n",
+        "            jsont5[model_name]['Time Taken (seconds)'].append(time_taken)\n",
+        "\n",
+        "            # Store results for CSV\n",
+        "            csvresults.append({\n",
         "                'Query': query,\n",
         "                'Model': model_name,\n",
         "                'Generated Reply': reply,\n",
@@ -599,20 +606,28 @@
         "                'Time Taken (seconds)': time_taken\n",
         "            })\n",
         "\n",
-        "            data_samples['question'].append(query)\n",
-        "            data_samples['answer'].append(reply)\n",
-        "            data_samples['contexts'].append(referencess)\n",
-        "\n",
         "        printmemorys()\n",
-        "    # save the result to the csv and json\n",
-        "    csvresults = pd.DataFrame(resultslist)\n",
-        "    csvresults.to_csv('t5models.csv', index=False)\n",
         "\n",
-        "    print(\"Results saved to t5models.csv\")\n",
-        "    with open('t5models.json', 'w') as f:\n",
-        "        json.dump(data_samples, f, indent=4)\n",
+        "    # create JSON files for each model\n",
+        "    for model_name, results in jsont5.items():\n",
+        "        data_samples = {\n",
+        "            'question': results['question'],\n",
+        "            'answer': results['answer'],\n",
+        "            'contexts': results['contexts'],\n",
+        "            'Bleu': results['Bleu'],\n",
+        "            'Memory Usage (MB)': results['Memory Usage (MB)'],\n",
+        "            'Time Taken (seconds)': results['Time Taken (seconds)']\n",
+        "        }\n",
+        "        json_filename = f'{model_name.replace(\"/\", \"_\")}_data_samples.json'\n",
+        "        with open(json_filename, 'w') as f:\n",
+        "            json.dump(data_samples, f, indent=4)\n",
         "\n",
-        "    print(\"Data samples saved to t5models.json\")"
+        "    # Convert results to csv\n",
+        "    resultscsv = pd.DataFrame(csvresults)\n",
+        "\n",
+        "    resultscsv.to_csv('t5models.csv', index=False)\n",
+        "\n",
+        "    print(\"Results saved to t5models.csv\")\n"
       ]
     }
   ],
@@ -632,7 +647,7 @@
       "widgets": {}
     },
     "colab": {
-      "gpuType": "T4",
+      "gpuType": "L4",
       "machine_shape": "hm",
       "provenance": []
     },
@@ -645,7 +660,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "3c82cec054ef4be5a68811fe5d6b65eb": {
+        "427ee0d990844a739aab543d2b415ede": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -660,14 +675,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_bd22e039cb7a49d3b000146edc1e09cb",
-              "IPY_MODEL_85d307d1085c4cd397f7daedd09f26d8",
-              "IPY_MODEL_80812459a1fa4691aba864625055aaf1"
+              "IPY_MODEL_dcec419d10454e56a1a75fb10a0c15e9",
+              "IPY_MODEL_f2eeeb76787c4834a1d4e8c78f0088c5",
+              "IPY_MODEL_773efb85a666446e90ddca0d7f2314ba"
             ],
-            "layout": "IPY_MODEL_699f240060214fbab9765195d8f10cd6"
+            "layout": "IPY_MODEL_f1491c28ff774135a984bda165cabb52"
           }
         },
-        "bd22e039cb7a49d3b000146edc1e09cb": {
+        "dcec419d10454e56a1a75fb10a0c15e9": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -682,13 +697,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_39ecee2a221e44eab574ede87276139f",
+            "layout": "IPY_MODEL_4029f3cba0454948b3ac3e6119ec745c",
             "placeholder": "​",
-            "style": "IPY_MODEL_cce39bd19500428bba7df8c3d3ff642b",
+            "style": "IPY_MODEL_438bc12544c942b6adea22db2ffc69db",
             "value": "Loading checkpoint shards: 100%"
           }
         },
-        "85d307d1085c4cd397f7daedd09f26d8": {
+        "f2eeeb76787c4834a1d4e8c78f0088c5": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -704,15 +719,15 @@
             "bar_style": "success",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_5bf71a0e124b47619d6f0de13485b91c",
+            "layout": "IPY_MODEL_e09a34048f1a4bac93a738302f7044e0",
             "max": 5,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_cc25fd5ac17a438f8d7e3543bb138099",
+            "style": "IPY_MODEL_49eab99af5124f8b8315c9259fc5d4f7",
             "value": 5
           }
         },
-        "80812459a1fa4691aba864625055aaf1": {
+        "773efb85a666446e90ddca0d7f2314ba": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -727,13 +742,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_56a84644d8bf41fabc86d84df38190d6",
+            "layout": "IPY_MODEL_cd3659f0855c43bcb93187646aab4126",
             "placeholder": "​",
-            "style": "IPY_MODEL_ca03b5095ce54c21ab6d63d87f608c28",
-            "value": " 5/5 [00:02&lt;00:00,  2.51it/s]"
+            "style": "IPY_MODEL_e713e955b19d4ba2b7366b826464369a",
+            "value": " 5/5 [00:01&lt;00:00,  2.98it/s]"
           }
         },
-        "699f240060214fbab9765195d8f10cd6": {
+        "f1491c28ff774135a984bda165cabb52": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -785,7 +800,7 @@
             "width": null
           }
         },
-        "39ecee2a221e44eab574ede87276139f": {
+        "4029f3cba0454948b3ac3e6119ec745c": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -837,7 +852,7 @@
             "width": null
           }
         },
-        "cce39bd19500428bba7df8c3d3ff642b": {
+        "438bc12544c942b6adea22db2ffc69db": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -852,7 +867,7 @@
             "description_width": ""
           }
         },
-        "5bf71a0e124b47619d6f0de13485b91c": {
+        "e09a34048f1a4bac93a738302f7044e0": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -904,7 +919,7 @@
             "width": null
           }
         },
-        "cc25fd5ac17a438f8d7e3543bb138099": {
+        "49eab99af5124f8b8315c9259fc5d4f7": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -920,7 +935,7 @@
             "description_width": ""
           }
         },
-        "56a84644d8bf41fabc86d84df38190d6": {
+        "cd3659f0855c43bcb93187646aab4126": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -972,7 +987,7 @@
             "width": null
           }
         },
-        "ca03b5095ce54c21ab6d63d87f608c28": {
+        "e713e955b19d4ba2b7366b826464369a": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
